--- a/css/screen.css
+++ b/css/screen.css
@@ -1,9 +1,25 @@
 /*---------------------------------------/*
  # SETTINGS
 /*---------------------------------------*/
+@font-face {
+  font-family: 'Inter Web';
+  src: url('../fonts/Inter-Regular.woff2') format('woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Inter Web';
+  src: url('../fonts/Inter-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+}
+
 
 :root {
   /* CSS variables here */
+  --global-text-color: #20223a;
+  --global-background-color: #F5F6FA;
+  --global-selection-color: #3385FF;
+  --global-link-color: #3385FF;
 }
 
 /*---------------------------------------/*
@@ -38,12 +54,13 @@ img {
 html {
   font-size: 100%;
   line-height: 1.5;
-  font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
-  color: #171b1c;
+  font-family: "Inter Web", Helvetica, arial, sans-serif;
+  color: var(--global-text-color);
   scroll-behavior: smooth;
   /* anti aliasing */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--global-background-color);
 }
 
 /*
@@ -51,7 +68,7 @@ html {
 */
 
 ::selection {
-  background: #00b2ff;
+  background: var(--global-selection-color);
   color: white;
 }
 
@@ -133,7 +150,7 @@ hr {
 }
 
 a {
-  color: #008fcc;
+  color: var(--global-link-color);
   transition: all 0.1s ease-in-out;
 }
 
@@ -147,6 +164,11 @@ a:hover {
 
 a:active {
   color: #006b99;
+}
+
+input,
+label{
+  display: block;
 }
 
 /*---------------------------------------/*
@@ -289,6 +311,35 @@ a:active {
   align-content: space-between;
 }
 
+/*
+ Object: Button reset
+ ---
+ Small button reset object
+*/
+
+.o-button-reset {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+ 
+ /* inherit font & color from ancestor */
+  color: inherit;
+  font: inherit;
+ 
+ /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+  line-height: normal;
+ 
+ /* Corrects font smoothing for webkit */
+ -webkit-font-smoothing: inherit;
+ -moz-osx-font-smoothing: inherit;
+ 
+  /* Corrects inability to style clickable `input` types in iOS */
+  -webkit-appearance: none;
+ }
+
 /*------------------------------------*\
   #COMPONENTS
 \*------------------------------------*/
@@ -297,6 +348,61 @@ a:active {
     ---
     Component description
 */
+.c-logo{
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+.c-logo__symbol{
+  height: 100%;
+  display: block;
+}
+.c-logo__path--1{
+  fill: #20223A;
+}
+.c-logo__path--2{
+  fill: #3385FF;
+}
+.c-logo__path--3{
+  fill: #1B4186
+}
+
+.c-form-field--option{
+  display: flex;
+  gap: 0.5rem;
+}
+
+.c-input{
+  appearance: none;
+  /*appearance op none zetten zodat het op windows en mac er hetzelfde uit ziet*/
+  width: 100%;
+  color: inherit;
+  font: inherit;
+  border: 1px solid #E2E3E7;
+  border-radius: 3px;
+  line-height: 1.5rem;
+  padding: calc(.75rem - 1px) 1rem;
+  /* -1 pixel voor de border top en bottom
+  kotje is niet exact 48px, maar zal waarschijnlijk aan browser ofso liggen */
+  outline: none;
+  /* als je outline om none zet, moet je een alternatief zoeken want zo kunnen we niet zien welk input veld geselecteerd is*/
+}
+.c-input:focus{
+  border-color: #3385FF;
+  box-shadow: 0 0 0 3px #3385FF4d;
+}
+
+.c-button{
+  width: 100%;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding: .875rem 0 .625rem;
+  background-color: #3385FF;
+  border: 1px solid #2E77E6;
+  border-radius: 3px;
+  color: white;
+  font-weight: 600;
+}
 
 /*---------------------------------------/*
  # UTILITIES
