--- a/css/screen.css
+++ b/css/screen.css
@@ -375,6 +375,7 @@ label{
   min-height: 100vh;
   display: flex;
   align-items: center;
+  /* Om iets te centeren over de volledige pagina */
 }
 
 .c-logo{
@@ -403,10 +404,12 @@ label{
 
 .c-input{
   appearance: none;
-  /*appearance op none zetten zodat het op windows en mac er hetzelfde uit ziet*/
+  /*appearance op none zetten zorgt ervoor dat we de stijl door de browser gemaakt op dat element verwijderen*/
   width: 100%;
   color: inherit;
+  /* color: inherit = de color nemen van zijn parent */
   font: inherit;
+  /* color: inherit = de color nemen van zijn parent */
   border: 1px solid var(--global-color-neutral-100);
   border-radius: 3px;
   line-height: var(--global-whitespace);
